--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasanul Kibria B12A02</title>
     <link rel="stylesheet" href="styles/flower.css">
+    <!-- font owsome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar display-flex">
+            <img src="./assets/logo.png" alt="">
+
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="">Home</a></li>
+                <li class="nav-item"><a href="">Shop</a></li>
+                <li class="nav-item"><a href="">About us</a></li>
+                <li class="nav-item"><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <span>Cart ($56)</span>
+            </ul>
+             </nav>
+
+            <div class="banner display-flex">
+
+                <div class="banner-container">
+                    <h1 class="Banner-title">ALWAYS <span class="banner-red">FRESH <br>FLOWERS</span></h1>
+                    <p class="banner-des">Indulge your senses with the beauty and fragrance of <br>our fresh flower shop.
+                        From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect
+                        for any occasion. </p>
+                </div>
+                <img src="./assets/hero-flower.png" alt="">
+            </div>
+
+       
+    </header>
+
 </body>
+
 </html>
