plant section started

--- a/index.html
+++ b/index.html
@@ -24,21 +24,89 @@
                 <li class="nav-item"><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
                 <span>Cart ($56)</span>
             </ul>
-             </nav>
+        </nav>
 
-            <div class="banner display-flex">
+        <div class="banner display-flex">
 
-                <div class="banner-container">
-                    <h1 class="Banner-title">ALWAYS <span class="banner-red">FRESH <br>FLOWERS</span></h1>
-                    <p class="banner-des">Indulge your senses with the beauty and fragrance of <br>our fresh flower shop.
-                        From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect
-                        for any occasion. </p>
+            <div class="banner-container">
+                <h1 class="Banner-title">ALWAYS <span class="banner-red">FRESH <br>FLOWERS</span></h1>
+                <p class="banner-des">Indulge your senses with the beauty and fragrance of <br>our fresh flower shop.
+                    From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are
+                    perfect
+                    for any occasion. </p>
+            </div>
+            <img src="./assets/hero-flower.png" alt="">
+        </div>
+
+
+    </header>
+    <!-- section our plants -->
+    <main>
+
+        <section class="Plants Section">
+            <!-- <div> -->
+            <h3 class="plants-title">Our <span>Plants </span> </h3>
+            <p class="plants-des">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
+                classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <!-- </div> -->
+            <div class="our-plants">
+
+                <div class="plant-container">
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <h5 class="flower-name">Lily Blossom</h5>
+                    <h3 class="flower-price">20 USD</h3>
+                    <button class="btn-flower"> Add To Cart</button>
                 </div>
-                <img src="./assets/hero-flower.png" alt="">
+                <div class="plant-container">
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <h5 class="flower-name">Lily Blossom</h5>
+                    <h3 class="flower-price">20 USD</h3>
+                    <button class="btn-flower"> Add To Cart</button>
+                </div>
+                <div class="plant-container">
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <h5 class="flower-name">Lily Blossom</h5>
+                    <h3 class="flower-price">20 USD</h3>
+                    <button class="btn-flower"> Add To Cart</button>
+                </div>
+                <div class="plant-container">
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <h5 class="flower-name">Lily Blossom</h5>
+                    <h3 class="flower-price">20 USD</h3>
+                    <button class="btn-flower"> Add To Cart</button>
+                </div>
+                <div class="plant-container">
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <h5 class="flower-name">Lily Blossom</h5>
+                    <h3 class="flower-price">20 USD</h3>
+                    <button class="btn-flower"> Add To Cart</button>
+                </div>
+                <div class="plant-container">
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <h5 class="flower-name">Lily Blossom</h5>
+                    <h3 class="flower-price">20 USD</h3>
+                    <button class="btn-flower"> Add To Cart</button>
+                </div>
+                <div class="plant-container">
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <h5 class="flower-name">Lily Blossom</h5>
+                    <h3 class="flower-price">20 USD</h3>
+                    <button class="btn-flower"> Add To Cart</button>
+                </div>
+                <div class="plant-container">
+                    <img src="./assets/sample-flower-image.png" alt="">
+                    <h5 class="flower-name">Lily Blossom</h5>
+                    <h3 class="flower-price">20 USD</h3>
+                    <button class="btn-flower"> Add To Cart</button>
+                </div>
+
             </div>
 
-       
-    </header>
+        </section>
+
+
+
+    </main>
 
 </body>
 
