plant section end

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
-    <header>
-        <nav class="navbar display-flex">
+<body class="">
+    <header class="" >
+        <nav class="navbar display-flex ">
             <img src="./assets/logo.png" alt="">
 
             <ul class="nav-links display-flex">
@@ -35,7 +35,9 @@
                     perfect
                     for any occasion. </p>
             </div>
+            <!-- <div> -->
             <img src="./assets/hero-flower.png" alt="">
+            <!-- </div> -->
         </div>
 
 
@@ -43,13 +45,13 @@
     <!-- section our plants -->
     <main>
 
-        <section class="Plants Section">
+        <section class="Plants-Section  max-width">
             <!-- <div> -->
-            <h3 class="plants-title">Our <span>Plants </span> </h3>
+            <h3 class="plants-title">Our <span class="plant-red">Plants </span> </h3>
             <p class="plants-des">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
                 classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             <!-- </div> -->
-            <div class="our-plants">
+            <div class="our-plants max-width">
 
                 <div class="plant-container">
                     <img src="./assets/sample-flower-image.png" alt="">
