footer section done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="">
-    <header class="" >
+    <header class="">
         <nav class="navbar display-flex ">
             <img src="./assets/logo.png" alt="">
 
@@ -45,7 +45,7 @@
     <!-- section our plants -->
     <main>
 
-        <section class="Plants-Section  max-width">
+        <section class="Plants-Section">
             <!-- <div> -->
             <h3 class="plants-title">Our <span class="plant-red">Plants </span> </h3>
             <p class="plants-des">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
@@ -105,10 +105,59 @@
             </div>
 
         </section>
+        <!-- flower & plants Lover -->
+        <section class="flower-lover-section">
+            <div>
+                <img src="./assets/flower-store.png" alt="">
+            </div>
+            <div>
+                <h2 class="flower-lover-title">Flower & Plants <br> Lover</h2>
+                 <ul>
+               <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                    From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+               <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+               </ul>
+            </div>
 
+
+        </section>
+<section class="join-color">
+
+
+
+</section>
 
 
     </main>
+
+    <footer class="footer-items">
+        <div>
+            <img src="./assets/logo.png" alt="">
+            <p>
+                Indulge your senses with the beauty and fragrance of our fresh flower shop. 
+            </p>
+        </div>
+        <div class="footer-nav">
+            <a href="">Home</a>
+            <a href="">Abut Us</a>
+            <a href="">Blog</a>
+            <a href="">FAQ</a>
+            <a href="">Contact Us</a>
+            <a href="">Features</a>
+            <a href="">Pricing</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Terms & Service</a>
+            <a href="">Help Center</a>
+            
+        </div>
+<div class="footer-icon">
+        <img src="./assets/icon-facebook.png" alt="">
+        <img src="./assets/icon-linkedin.png" alt="">
+        <img src="./assets/icon-twitter.png" alt="">
+        <img src="./assets/icon-youtube.png" alt="">
+</div>
+    </footer>
 
 </body>
 
