subscribe button sction donr

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 
         </section>
         <!-- flower & plants Lover -->
-        <section class="flower-lover-section">
+        <section >
+            <div class="flower-lover-section">
             <div>
                 <img src="./assets/flower-store.png" alt="">
             </div>
@@ -119,6 +120,7 @@
                 <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                </ul>
             </div>
+            </div>
 
 
         </section>
@@ -127,10 +129,22 @@
 
 
 </section>
+<!-- subscribe button section -->
 
+ <section >
+    
+<div class="colorful-container" >
+    <div class="colorful-subscription-button">
+        <h1>Join the colorful Bunch</h1>
+        <input type="email" class="email-input" placeholder="Write email">
+        <button class="subscribe-btn">Subscribe</button>
+    </div>
+    </div>
+
+ </section>
 
     </main>
-
+<!-- footer section -->
     <footer class="footer-items">
         <div>
             <img src="./assets/logo.png" alt="">
