--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             </div>
 
         </section>
+
         <!-- flower & plants Lover -->
         <section >
             <div class="flower-lover-section">
@@ -124,11 +125,15 @@
 
 
         </section>
-<section class="join-color">
+
+        <!-- Deals section-->
+
+<section class="best-deals">
 
 
 
 </section>
+
 <!-- subscribe button section -->
 
  <section >
