best deal section image added

--- a/index.html
+++ b/index.html
@@ -107,20 +107,23 @@
         </section>
 
         <!-- flower & plants Lover -->
-        <section >
+        <section>
             <div class="flower-lover-section">
-            <div>
-                <img src="./assets/flower-store.png" alt="">
-            </div>
-            <div>
-                <h2 class="flower-lover-title">Flower & Plants <br> Lover</h2>
-                 <ul>
-               <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh flower shop.
-                    From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-               <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-               </ul>
-            </div>
+                <div>
+                    <img src="./assets/flower-store.png" alt="">
+                </div>
+                <div>
+                    <h2 class="flower-lover-title">Flower & Plants <br> Lover</h2>
+                    <ul>
+                        <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh
+                            flower shop.
+                            From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh
+                            flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="flower-lover-des"> Indulge your senses with the beauty and fragrance of our fresh
+                            flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
             </div>
 
 
@@ -128,33 +131,45 @@
 
         <!-- Deals section-->
 
-<section class="best-deals">
+        <section >
+            <div class="best-deals">
+            <h2 class="best-deal-title">Latest <span class="best-deal-red">deal</span></h2>
+            <p class="best-deal-des">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
+                classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                </div>
+             <div class="best-img">
+                <div class="best-img2">
+                    <img class="best-img3" src="./assets/deal-bloom.png" alt=""><img class="best-img3" src="./assets/deal-ana.png" alt="">
+                </div>
+                <div class="best-img1">
+                    <img src="./assets/deal-zabo.png" alt="">
+                </div>
+             </div>
 
 
+        </section>
 
-</section>
+        <!-- subscribe button section -->
 
-<!-- subscribe button section -->
+        <section>
 
- <section >
-    
-<div class="colorful-container" >
-    <div class="colorful-subscription-button">
-        <h1>Join the colorful Bunch</h1>
-        <input type="email" class="email-input" placeholder="Write email">
-        <button class="subscribe-btn">Subscribe</button>
-    </div>
-    </div>
+            <div class="colorful-container">
+                <div class="colorful-subscription-button">
+                    <h1>Join the colorful Bunch</h1>
+                    <input type="email" class="email-input" placeholder="Write email">
+                    <button class="subscribe-btn">Subscribe</button>
+                </div>
+            </div>
 
- </section>
+        </section>
 
     </main>
-<!-- footer section -->
+    <!-- footer section -->
     <footer class="footer-items">
         <div>
             <img src="./assets/logo.png" alt="">
             <p>
-                Indulge your senses with the beauty and fragrance of our fresh flower shop. 
+                Indulge your senses with the beauty and fragrance of our fresh flower shop.
             </p>
         </div>
         <div class="footer-nav">
@@ -168,14 +183,14 @@
             <a href="">Privacy Policy</a>
             <a href="">Terms & Service</a>
             <a href="">Help Center</a>
-            
+
         </div>
-<div class="footer-icon">
-        <img src="./assets/icon-facebook.png" alt="">
-        <img src="./assets/icon-linkedin.png" alt="">
-        <img src="./assets/icon-twitter.png" alt="">
-        <img src="./assets/icon-youtube.png" alt="">
-</div>
+        <div class="footer-icon">
+            <img src="./assets/icon-facebook.png" alt="">
+            <img src="./assets/icon-linkedin.png" alt="">
+            <img src="./assets/icon-twitter.png" alt="">
+            <img src="./assets/icon-youtube.png" alt="">
+        </div>
     </footer>
 
 </body>
