--- a/index.html
+++ b/index.html
@@ -137,12 +137,34 @@
             <p class="best-deal-des">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
                 classic roses to exotic blooms, we offer a wide variety of fresh.</p>
                 </div>
+
              <div class="best-img">
                 <div class="best-img2">
-                    <img class="best-img3" src="./assets/deal-bloom.png" alt=""><img class="best-img3" src="./assets/deal-ana.png" alt="">
+                    
+                    <img class="best-img3" src="./assets/deal-bloom.png" alt="">
+                    <div class="image-text">
+                    <span class="discount">60% Off</span>
+                    <h3>Bloom Plant</h3>
+                    <a href="#" class="shop-now">Shop Now</a>
+
                 </div>
-                <div class="best-img1">
+                </div>
+                    <div class="best-img2">
+                    
+                    <img class="best-img3" src="./assets/deal-ana.png" alt="">
+                   <div class="image-text">
+                    <span class="discount">30% Off</span>
+                    <h3>Ana Plant</h3>
+                    <a href="#" class="shop-now">Shop Now</a>
+                </div>
+                </div>
+                <div class="best-img2">
                     <img src="./assets/deal-zabo.png" alt="">
+                    <div class="image-text">
+                    <span class="discount">25% Off</span>
+                    <h3>Zabo Plant</h3>
+                   <a href="#" class="shop-now">Shop Now</a>
+                </div>
                 </div>
              </div>
 
