--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p class="plants-des">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
                 classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             <!-- </div> -->
-            <div class="our-plants max-width">
+            <div class="our-plants ">
 
                 <div class="plant-container">
                     <img src="./assets/sample-flower-image.png" alt="">
@@ -139,8 +139,9 @@
                 </div>
 
              <div class="best-img">
+                <div>
                 <div class="best-img2">
-                    
+
                     <img class="best-img3" src="./assets/deal-bloom.png" alt="">
                     <div class="image-text">
                     <span class="discount">60% Off</span>
@@ -158,8 +159,10 @@
                     <a href="#" class="shop-now">Shop Now</a>
                 </div>
                 </div>
-                <div class="best-img2">
-                    <img src="./assets/deal-zabo.png" alt="">
+                </div>
+
+                <div class="best-img4">
+                    <img class="best-img3" src="./assets/deal-zabo.png" alt="">
                     <div class="image-text">
                     <span class="discount">25% Off</span>
                     <h3>Zabo Plant</h3>
