trusted badge added

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <section>
             <div class="flower-lover-section">
                 <div>
+                    <img class="trusted-badge" src="./assets/trusted-badge.png" alt="">
                     <img src="./assets/flower-store.png" alt="">
                 </div>
                 <div>
